--- a/README.Rmd
+++ b/README.Rmd
@@ -1,18 +1,28 @@
+---
+output: github_document
+---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
+
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  fig.path = "man/figures/README-",
+  out.width = "100%"
+)
+```
 
 # datahut
 
 <!-- badges: start -->
-
 <!-- badges: end -->
 
 `datahut` provides datasets for statistical data analysis.
 
 ## Installation
 
-You can install the released version of datahut from
-[CRAN](https://CRAN.R-project.org) with:
+You can install the released version of datahut from [CRAN](https://CRAN.R-project.org) with:
 
 ``` r
 install.packages("datahut")
@@ -24,22 +34,18 @@ And the development version from [GitHub](https://github.com/) with:
 # install.packages("devtools")
 devtools::install_github("pridiltal/datahut")
 ```
-
 ## Example
 
 This is a basic example which shows you how to solve a common problem:
 
-``` r
+```{r example}
 library(datahut)
 ## basic example code
 library(fable)
-#> Loading required package: fabletools
 library(ggplot2)
 autoplot(tourist_sl)+
   ggtitle("Tourist arrivals to Sri Lanka from 1970 to 2018")+
   xlab("Year") +
   ylab("Tourist Arrivals")
-#> Plot variable not specified, automatically selected `.vars = Arrivals`
 ```
 
-<img src="man/figures/README-example-1.png" width="100%" />
