--- a/README.Rmd
+++ b/README.Rmd
@@ -22,13 +22,7 @@ knitr::opts_chunk$set(
 
 ## Installation
 
-You can install the released version of datahut from [CRAN](https://CRAN.R-project.org) with:
-
-``` r
-install.packages("datahut")
-```
-
-And the development version from [GitHub](https://github.com/) with:
+You can install the development version from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
