--- a/README.Rmd
+++ b/README.Rmd
@@ -32,6 +32,14 @@ devtools::install_github("pridiltal/datahut")
 
 This is a basic example which shows you how to solve a common problem:
 
+### Tourism in Sri Lanka
+
+**Special events**
+
+- There was a civil war in the country from July 1983 to May 2009.
+- On 26 December 2004, Sri Lanka became a victim of the Indian Ocean Tsunami.
+- Sri Lanka Easter bombings happened on 21 April 2019.
+
 ```{r example}
 library(datahut)
 ## basic example code
@@ -46,20 +54,20 @@ autoplot(touristsl)+
 
 ```{r}
 head(touristsl_monthly)
-touristsl_monthly[433:588,]  %>% autoplot()
-
 touristsl_monthly%>% autoplot(Arrivals)
+touristsl_monthly[433:588,]  %>% autoplot()
 ```
 
 
 ```{r}
 library(feasts)
-touristsl_monthly %>% gg_season(Arrivals, labels = "both") + ylab("Arrivals") +
+touristsl_monthly %>%
+  feasts::gg_season(Arrivals, labels = "both") +   ylab("Arrivals") +
 ggtitle("Seasonal plot: Monthly tourist arrivals to Sri Lanka")
 ```
 
 ```{r}
 touristsl_monthly %>%
-gg_subseries(Arrivals) + ylab("Arrivals") + ggtitle("Subseries plot: Monthly tourist arrivals to Sri Lanka")
+feasts::gg_subseries(Arrivals) + ylab("Arrivals") + ggtitle("Subseries plot: Monthly tourist arrivals to Sri Lanka")
 
 ```
